[package]
name = "tc-consensus"
authors = { workspace = true }
description = "Client-side worker for Tanssi which unifies Aura and Nimbus"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
# Substrate deps
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-telemetry = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true, features = [ "full_crypto", "std" ] }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-timestamp = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Own
dp-consensus = { workspace = true, features = [ "std" ] }
pallet-registrar-runtime-api = { workspace = true, features = [ "std" ] }

# Cumulus dependencies
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }

# Polkadot
polkadot-node-primitives = { workspace = true }
polkadot-node-subsystem = { workspace = true }
polkadot-overseer = { workspace = true }
polkadot-primitives = { workspace = true }

# Nimbus Dependencies
async-backing-primitives = { workspace = true }
nimbus-consensus = { workspace = true }
nimbus-primitives = { workspace = true, features = [ "std" ] }

# Frontier Dependencies
fc-rpc = { workspace = true }

# Other deps
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
tokio = { workspace = true }
tokio-util = { workspace = true, features = [ "rt" ] }
tracing = { workspace = true }

[dev-dependencies]
cumulus-test-relay-sproof-builder = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
sc-block-builder = { workspace = true }
sc-keystore = { workspace = true }
sc-network-test = { workspace = true }
sp-keyring = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tempfile = { workspace = true }
