[package]
name = "manual-randomness-rpc"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cumulus-primitives-core = { workspace = true, features = [ "std" ] }
flume = { workspace = true }
hex-literal = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
parity-scale-codec = { workspace = true, features = [ "std" ] }
sp-core = { workspace = true, features = [ "std" ] }
staging-xcm = { workspace = true }
