[package]
name = "tc-orchestrator-chain-rpc-interface"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-io = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = [ "ws-client" ] }
schnellru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "sync" ] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Dancekit
dc-orchestrator-chain-interface = { workspace = true }
dp-container-chain-genesis-data = { workspace = true }
dp-core = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sp-api = { workspace = true, features = [ "std" ] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-state-machine = { workspace = true, features = [ "std" ] }
sp-storage = { workspace = true }

# Polkadot
polkadot-overseer = { workspace = true }
