[package]
name = "tc-service-orchestrator-chain"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
version = "0.15.0"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
fdlimit = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = [ "server" ] }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Local
node-common = { workspace = true }
tc-service-container-chain-spawner = { workspace = true }

dancebox-runtime = { workspace = true, features = [ "std" ] }

dc-orchestrator-chain-interface = { workspace = true }
tc-consensus = { workspace = true }

# Substrate
sc-cli = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-panic-handler = { workspace = true }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }

# Nimbus
nimbus-primitives = { workspace = true, features = [ "std" ] }
