[package]
name = "stream-payment-rpc"
authors = { workspace = true }
description = "RPC interface for the Stream Payment pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
jsonrpsee = { workspace = true }
pallet-stream-payment-runtime-api = { workspace = true, features = [ "std" ] }
parity-scale-codec = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
sp-api = { workspace = true, features = [ "std" ] }
sp-runtime = { workspace = true, features = [ "std" ] }
thiserror = { workspace = true }
