[package]
authors = ["Anonymous"]
name = "tc-tanssi-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]

cumulus-primitives-core = { workspace = true, features = ["std"] }
polkadot-overseer = { workspace = true }

sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-state-machine = { workspace = true, features = ["std"] }
sc-client-api = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }