[package]
name = "pallet-author-noting"
authors = { workspace = true }
description = "Author noting pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true, optional = true, features = [ "alloc" ] }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info = { workspace = true }
serde = { workspace = true, optional = true, features = [ "derive" ] }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
tp-author-noting-inherent = { workspace = true }
tp-chain-state-snapshot = { workspace = true }
tp-core = { workspace = true }
tp-traits = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
sp-externalities = { workspace = true }
sp-io = { workspace = true }
sp-state-machine = { workspace = true }
sp-version = { workspace = true }
test-relay-sproof-builder = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-consensus-aura/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"tp-author-noting-inherent/std",
	"tp-chain-state-snapshot/std",
	"tp-core/std",
	"tp-traits/std",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"frame-benchmarking",
	"hex",
	"tp-traits/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
