[package]
name = "pallet-author-noting"
authors = { workspace = true }
description = "Author noting pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true, optional = true, features = [ "alloc" ] }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info = { workspace = true }
serde = { workspace = true, optional = true, features = [ "derive" ] }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
dp-chain-state-snapshot = { workspace = true }
dp-core = { workspace = true }
tp-author-noting-inherent = { workspace = true }
tp-traits = { workspace = true }

[dev-dependencies]
bounded-collections = { workspace = true }
hex-literal = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
sp-externalities = { workspace = true }
sp-io = { workspace = true }
sp-state-machine = { workspace = true }
sp-version = { workspace = true }
test-relay-sproof-builder = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-core/std",
	"dp-chain-state-snapshot/std",
	"dp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-consensus-aura/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"tp-author-noting-inherent/std",
	"tp-traits/std",
	"bounded-collections/std",
	"hex?/std",
	"log/std",
	"polkadot-parachain-primitives/std",
	"polkadot-primitives/std",
	"serde?/std",
	"sp-core/std",
	"sp-externalities/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
	"test-relay-sproof-builder/std"
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"frame-benchmarking",
	"hex",
	"tp-traits/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime"
]
